--- a/Connexion.html
+++ b/Connexion.html
@@ -35,7 +35,7 @@
                     <label for="mdp"></label>
                     <input type="password" id="mdp" name="mdp" placeholder="Mot de passe">
                 </div>
-                <button type="submit" name="submit" onclick=lala() class="getstartedform">Se connecter</button>
+                <button type="submit" name="submit" onclick="logIn()" class="getstartedform">Se connecter</button>
             </form>
             <p class="redirection">Pas de compte ? Inscrivez-vous <a href="Inscription.html">ici</a> !</p>
         </div>
