--- a/Inscription.html
+++ b/Inscription.html
@@ -35,7 +35,7 @@
                     <label for="mdp"></label>
                     <input type="password" id="mdp" name="mdp" placeholder="Mot de passe">
                 </div>
-                <button type="submit" name="submit" onclick=lala() class="getstartedform">S'inscrire</button>
+                <button type="submit" name="submit" onclick="signIn()" class="getstartedform">S'inscrire</button>
             </form>
         </div>
     </section>
