--- a/Co_Ins.html
+++ b/Co_Ins.html
@@ -66,7 +66,6 @@
         </div>
     </section>
    
-    <script src="./js/login.js"></script>
-    <script src="./js/signin.js"></script>
+    <script src="./js/src/controllers/UserController.js"></script>
 </body>
 </html>
