fix: responsive html css

--- a/public/Accueil.html
+++ b/public/Accueil.html
@@ -32,7 +32,7 @@
                 <p>Chaque case cochée est un pas vers vos rêves.</p>
                 <div class="buttons">
                     <button class="getstarted">
-                        <a href="Inscription.html">Commencer à créer votre 1ère To-do-list</a>
+                        <a href="Co_Ins.html">Commencer à créer votre 1ère To-do-list</a>
                     </button>
                 </div>
             </div>
