--- a/public/Accueil.html
+++ b/public/Accueil.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="list">
-                <img src="../img/list.png">
+                <img src="../public/img/list.png">
             </div>
         </section>
     </body>
