--- a/public/Add_tache.html
+++ b/public/Add_tache.html
@@ -36,7 +36,7 @@
                 <textarea type="text" id="description" name="description"></textarea>
                 <label for="deadline">Deadline</label>
                 <input type="datetime-local" id="deadline" name="deadline">
-                <button type="submit" name="submit" onclick="createTask()">Ajouter la tache</button>
+                <button type="submit" name="submit" onclick="createTache()">Ajouter la tache</button>
             </form>
             <hr>
         </div>
