--- a/public/Co_Ins.html
+++ b/public/Co_Ins.html
@@ -45,7 +45,7 @@
                         <label for="remember"><input type="checkbox" id="remember">Remember me</label>
                         <a href="#">Forgot Password ?</a>
                     </div>
-                    <button type="submit" class="submit">Login</button>
+                    <button type="submit" class="submit" onclick="signIn()">Login</button>
                     <div class="loginRegister">
                         <p>Don't have an account ? <a href="#" class="registerLink">Register</a></p> 
                     </div>
@@ -68,7 +68,7 @@
                     <div class="rememberForgot">
                         <label for="agree"><input type="checkbox" id="agree" required>I agree with the terms and conditions</label>
                     </div>
-                    <button type="submit" class="submit">Register</button>
+                    <button type="submit" class="submit" onclick="logIn()">Register</button>
                     <div class="loginRegister">
                         <p>Already have an account ? <a href="#" class="loginLink">Login</a></p> 
                     </div>
