fix: register form

--- a/public/Co_Ins.html
+++ b/public/Co_Ins.html
@@ -54,7 +54,7 @@
 
             <div class="formBox registration">
                 <h2>Registration</h2>
-                <form action="/register" method="POST" class="registrationForm">
+                <form action="/signIn" method="POST" class="registrationForm">
                     <div class="inputBox">
                         <span class="icon"><i class="ri-mail-fill"></i></span>
                         <input type="text" name="email" id="email" required>
