fix: login register system

--- a/public/Co_Ins.html
+++ b/public/Co_Ins.html
@@ -30,7 +30,7 @@
         <section class="login_register">
             <div class="formBox login">
                 <h2>Login</h2>
-                <form action="#" method="POST" class="loginForm">
+                <form action="/login" method="POST" class="loginForm">
                     <div class="inputBox">
                         <span class="icon"><i class="ri-mail-fill"></i></span>
                         <input type="text" name="userEmail" id="userEmail" required>
