--- a/public/Accueil.html
+++ b/public/Accueil.html
@@ -23,6 +23,7 @@
             <ul>
                 <li><a href="Accueil.html">ACCUEIL</a></li>
                 <li><a href="Co_Ins.html">CONNEXION</a></li>
+                <li><a href="Add_tache.html">TODOLIST</a></li>
             </ul>
         </nav>
 
