--- a/public/Co_Ins.html
+++ b/public/Co_Ins.html
@@ -23,6 +23,7 @@
             <ul>
                 <li><a href="Accueil.html">ACCUEIL</a></li>
                 <li><a href="Co_Ins.html">CONNEXION</a></li>
+                <li><a href="Add_tache.html">TODOLIST</a></li>
             </ul>
         </nav>
 
@@ -54,7 +55,7 @@
 
             <div class="formBox registration">
                 <h2>Registration</h2>
-                <form action="/signIn" method="POST" class="registrationForm">
+                <form action="" method="POST" class="registrationForm">
                     <div class="bloc inputBox">
                         <span class="icon"><i class="ri-mail-fill"></i></span>
                         <input type="mail" name="email" id="email" required>
